# kubernetes-annotation-from-secret-applier

./: Cargo.toml  Dockerfile
.github/workflows/: docker-image.yml
src/: main.rs
